# aeres-token

./: .gitignore
arbitrum-token-sc/: .env example  Cargo.toml  Makefile  Makefile.toml  README.md
arbitrum-token-sc/.cargo/: config.toml
arbitrum-token-sc/src/: erc20.rs  lib.rs  main.rs
ink-sc/AeresToken/: Cargo.toml  README.md  lib.rs
