[package]
name = "arbitrum-token-sc"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = {version = "0.5.0", default-features = false}
mini-alloc = "0.4.2"
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
alloy-json-abi = "0.3.1"
wee_alloc = "0.4.5"

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "arbitrum-token-sc"
path = "src/main.rs"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"