[package]
name = "aeres-sc"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "AERES token smart-contract"

[dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
mini-alloc = "0.4.2"
stylus-sdk = "0.5.2"
dotenv = "0.15.0"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "aeres-sc"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
